include/maplibre_native_c/map.h

/** Map north orientation values used by mln_map_viewport_options. */
typedef enum mln_north_orientation : uint32_t {
  MLN_NORTH_ORIENTATION_UP = 0,
  MLN_NORTH_ORIENTATION_RIGHT = 1,
  MLN_NORTH_ORIENTATION_DOWN = 2,
  MLN_NORTH_ORIENTATION_LEFT = 3,
} mln_north_orientation;
/** Field mask values for mln_map_viewport_options. */
typedef enum mln_map_viewport_option_field : uint32_t {
  MLN_MAP_VIEWPORT_OPTION_NORTH_ORIENTATION = 1U << 0U,
  MLN_MAP_VIEWPORT_OPTION_CONSTRAIN_MODE = 1U << 1U,
  MLN_MAP_VIEWPORT_OPTION_VIEWPORT_MODE = 1U << 2U,
  MLN_MAP_VIEWPORT_OPTION_FRUSTUM_OFFSET = 1U << 3U,
} mln_map_viewport_option_field;
/** Field mask values for mln_map_tile_options. */
typedef enum mln_map_tile_option_field : uint32_t {
  MLN_MAP_TILE_OPTION_PREFETCH_ZOOM_DELTA = 1U << 0U,
  MLN_MAP_TILE_OPTION_LOD_MIN_RADIUS = 1U << 1U,
  MLN_MAP_TILE_OPTION_LOD_SCALE = 1U << 2U,
  MLN_MAP_TILE_OPTION_LOD_PITCH_THRESHOLD = 1U << 3U,
  MLN_MAP_TILE_OPTION_LOD_ZOOM_SHIFT = 1U << 4U,
  MLN_MAP_TILE_OPTION_LOD_MODE = 1U << 5U,
} mln_map_tile_option_field;
/** Options used when creating a map. */
typedef struct mln_map_options {
  uint32_t size;
  /**
   * Initial logical map width in UI pixels. Must be positive.
   *
   * Attaching a render session replaces this with the render target extent, and
   * mln_render_session_resize() replaces it again. Until the first attach it is
   * the viewport that camera and projection queries such as
   * mln_map_camera_for_lat_lng_bounds() and mln_map_pixel_for_lat_lng() are
   * answered against.
   */
  uint32_t width;
  /** Initial logical map height in UI pixels. See width. */
  uint32_t height;
  /**
   * UI-to-device pixel scale. Must be positive and finite.
   *
   * Unlike width and height, this is fixed for the lifetime of the map and
   * selects sprites, glyphs, and raster tiles for every frame the map renders.
   * Render targets carry their own scale factor for geometry and shaders, so
   * create the map with the scale factor you intend to render at. A render
   * session attached or resized with a different scale factor logs a warning
   * and renders styled imagery chosen for the map's density.
   */
  double scale_factor;
  /** One of mln_map_mode. Defaults to MLN_MAP_MODE_CONTINUOUS. */
  uint32_t map_mode;
  /**
   * Decodes MapLibre Tile (MLT) tiles whose integer streams use FastPFOR
   * encodings. Defaults to false.
   *
   * Enable this on maps that read vector sources created with
   * MLN_STYLE_VECTOR_TILE_ENCODING_MLT from a tile set that uses FastPFOR. It
   * is fixed for the lifetime of the map and applies to every MLT source the
   * map loads. A map created with this false decodes every other MLT encoding
   * and logs a tile parse warning for the FastPFOR ones.
   */
  bool fast_pfor_enabled;
} mln_map_options;
/** Screen-space inset in logical map pixels. */
typedef struct mln_edge_insets {
  double top;
  double left;
  double bottom;
  double right;
} mln_edge_insets;
/** Geographic coordinate in degrees used by map and projection APIs. */
typedef struct mln_lat_lng {
  /** Latitude in degrees. Input latitude must be finite and within [-90, 90].
   */
  double latitude;
  /** Longitude in degrees. Input longitude must be finite. */
  double longitude;
} mln_lat_lng;
typedef struct mln_geometry mln_geometry;
/** Coordinate array view. Coordinates are latitude/longitude pairs. */
typedef struct mln_coordinate_span {
  /** Coordinates. Null only when coordinate_count is 0. */
  const mln_lat_lng* coordinates;
  size_t coordinate_count;
} mln_coordinate_span;
/** Polygon ring array view. Each ring is a coordinate span. */
typedef struct mln_polygon_geometry {
  /** Rings. Null only when ring_count is 0. */
  const mln_coordinate_span* rings;
  size_t ring_count;
} mln_polygon_geometry;
/** Multi-line geometry view. Each line is a coordinate span. */
typedef struct mln_multi_line_geometry {
  /** Lines. Null only when line_count is 0. */
  const mln_coordinate_span* lines;
  size_t line_count;
} mln_multi_line_geometry;
/** Multi-polygon geometry view. Each polygon contains ring views. */
typedef struct mln_multi_polygon_geometry {
  /** Polygons. Null only when polygon_count is 0. */
  const mln_polygon_geometry* polygons;
  size_t polygon_count;
} mln_multi_polygon_geometry;
/** Geometry collection view. */
typedef struct mln_geometry_collection {
  /** Child geometries. Null only when geometry_count is 0. */
  const mln_geometry* geometries;
  size_t geometry_count;
} mln_geometry_collection;
/**
 * MapLibre geometry input descriptor graph.
 *
 * Geometry coordinates use mln_lat_lng for consistency with the rest of the C
 * API. They are converted to native geometry points as longitude/latitude.
 * A root geometry descriptor starts at nesting depth 0. Status-returning
 * functions reject geometry collection children past depth 64 with
 * MLN_STATUS_INVALID_ARGUMENT.
 */
typedef struct mln_geometry {
  uint32_t size;
  /** One of mln_geometry_type. */
  uint32_t type;
  union {
    mln_lat_lng point;
    mln_coordinate_span line_string;
    mln_polygon_geometry polygon;
    mln_coordinate_span multi_point;
    mln_multi_line_geometry multi_line_string;
    mln_multi_polygon_geometry multi_polygon;
    mln_geometry_collection geometry_collection;
  } data;
} mln_geometry;
/** Tile-pyramid offline region definition. */
typedef struct mln_offline_tile_pyramid_region_definition {
  uint32_t size;
  /** Style URL. Copied during region creation. */
  const char* style_url;
  mln_lat_lng_bounds bounds;
  double min_zoom;
  /**
   * Maximum zoom. Positive infinity follows MapLibre Native behavior and lets
   * each tile source use its own maximum zoom.
   */
  double max_zoom;
  float pixel_ratio;
  bool include_ideographs;
} mln_offline_tile_pyramid_region_definition;
/** Geometry offline region definition. */
typedef struct mln_offline_geometry_region_definition {
  uint32_t size;
  /** Style URL. Copied during region creation. */
  const char* style_url;
  /** Geometry descriptor. Borrowed for the duration of region creation. */
  const mln_geometry* geometry;
  double min_zoom;
  /**
   * Maximum zoom. Positive infinity follows MapLibre Native behavior and lets
   * each tile source use its own maximum zoom.
   */
  double max_zoom;
  float pixel_ratio;
  bool include_ideographs;
} mln_offline_geometry_region_definition;
/** Tagged offline region definition. */
typedef struct mln_offline_region_definition {
  uint32_t size;
  /** One of mln_offline_region_definition_type. */
  uint32_t type;
  union {
    mln_offline_tile_pyramid_region_definition tile_pyramid;
    mln_offline_geometry_region_definition geometry;
  } data;
} mln_offline_region_definition;
/** Live map viewport and render-transform controls. */
typedef struct mln_map_viewport_options {
  uint32_t size;
  uint32_t fields;
  /** One of mln_north_orientation. */
  uint32_t north_orientation;
  /** One of mln_constrain_mode. */
  uint32_t constrain_mode;
  /** One of mln_viewport_mode. */
  uint32_t viewport_mode;
  mln_edge_insets frustum_offset;
} mln_map_viewport_options;
/** Tile prefetch and LOD tuning controls. */
typedef struct mln_map_tile_options {
  uint32_t size;
  uint32_t fields;
  /** Native uint8_t prefetch zoom delta. */
  uint32_t prefetch_zoom_delta;
  double lod_min_radius;
  double lod_scale;
  double lod_pitch_threshold;
  double lod_zoom_shift;
  /** One of mln_tile_lod_mode. */
  uint32_t lod_mode;
} mln_map_tile_options;