bindings/dart/lib/src/internal/c/maplibre_native_c.g.dart


  static ffi.Pointer<mln_map_options> $allocate(
    ffi.Allocator $allocator, {
    required int size,
    required int width,
    required int height,
    required double scale_factor,
    required int map_mode,
    required bool fast_pfor_enabled,
  }) => $allocator<mln_map_options>()
    ..ref.size = size
    ..ref.width = width
    ..ref.height = height
    ..ref.scale_factor = scale_factor
    ..ref.map_mode = map_mode
    ..ref.fast_pfor_enabled = fast_pfor_enabled;
}

typedef mln_map_projection = ffi.Uint64;
typedef Dartmln_map_projection = int;

enum mln_map_tile_option_field {
  MLN_MAP_TILE_OPTION_PREFETCH_ZOOM_DELTA(1),
  MLN_MAP_TILE_OPTION_LOD_MIN_RADIUS(2),
  MLN_MAP_TILE_OPTION_LOD_SCALE(4),
  MLN_MAP_TILE_OPTION_LOD_PITCH_THRESHOLD(8),
  MLN_MAP_TILE_OPTION_LOD_ZOOM_SHIFT(16),
  MLN_MAP_TILE_OPTION_LOD_MODE(32);

  final int value;
  const mln_map_tile_option_field(this.value);

  static mln_map_tile_option_field fromValue(int value) => switch (value) {
    1 => MLN_MAP_TILE_OPTION_PREFETCH_ZOOM_DELTA,
    2 => MLN_MAP_TILE_OPTION_LOD_MIN_RADIUS,
    4 => MLN_MAP_TILE_OPTION_LOD_SCALE,
    8 => MLN_MAP_TILE_OPTION_LOD_PITCH_THRESHOLD,
    16 => MLN_MAP_TILE_OPTION_LOD_ZOOM_SHIFT,
    32 => MLN_MAP_TILE_OPTION_LOD_MODE,
    _ => throw ArgumentError(
      'Unknown value for mln_map_tile_option_field: $value',
    ),
  };
}

final class mln_map_tile_options extends ffi.Struct {
  @ffi.Uint32()
  external int size;

  @ffi.Uint32()
  external int fields;

  @ffi.Uint32()
  external int prefetch_zoom_delta;

  @ffi.Double()
  external double lod_min_radius;

  @ffi.Double()
  external double lod_scale;

  @ffi.Double()
  external double lod_pitch_threshold;

  @ffi.Double()
  external double lod_zoom_shift;

  @ffi.Uint32()
  external int lod_mode;

  static ffi.Pointer<mln_map_tile_options> $allocate(
    ffi.Allocator $allocator, {
    required int size,
    required int fields,
    required int prefetch_zoom_delta,
    required double lod_min_radius,
    required double lod_scale,
    required double lod_pitch_threshold,
    required double lod_zoom_shift,
    required int lod_mode,
  }) => $allocator<mln_map_tile_options>()
    ..ref.size = size
    ..ref.fields = fields
    ..ref.prefetch_zoom_delta = prefetch_zoom_delta
    ..ref.lod_min_radius = lod_min_radius
    ..ref.lod_scale = lod_scale
    ..ref.lod_pitch_threshold = lod_pitch_threshold
    ..ref.lod_zoom_shift = lod_zoom_shift
    ..ref.lod_mode = lod_mode;
}

enum mln_map_viewport_option_field {
  MLN_MAP_VIEWPORT_OPTION_NORTH_ORIENTATION(1),
  MLN_MAP_VIEWPORT_OPTION_CONSTRAIN_MODE(2),
  MLN_MAP_VIEWPORT_OPTION_VIEWPORT_MODE(4),
  MLN_MAP_VIEWPORT_OPTION_FRUSTUM_OFFSET(8);

  final int value;
  const mln_map_viewport_option_field(this.value);

  static mln_map_viewport_option_field fromValue(int value) => switch (value) {
    1 => MLN_MAP_VIEWPORT_OPTION_NORTH_ORIENTATION,
    2 => MLN_MAP_VIEWPORT_OPTION_CONSTRAIN_MODE,
    4 => MLN_MAP_VIEWPORT_OPTION_VIEWPORT_MODE,
    8 => MLN_MAP_VIEWPORT_OPTION_FRUSTUM_OFFSET,
    _ => throw ArgumentError(
      'Unknown value for mln_map_viewport_option_field: $value',
    ),
  };
}

final class mln_map_viewport_options extends ffi.Struct {
  @ffi.Uint32()
  external int size;

  @ffi.Uint32()
  external int fields;

  @ffi.Uint32()
  external int north_orientation;

  @ffi.Uint32()
  external int constrain_mode;

  @ffi.Uint32()
  external int viewport_mode;

  external mln_edge_insets frustum_offset;
}

final class mln_metal_borrowed_texture_descriptor extends ffi.Struct {
  @ffi.Uint32()
  external int size;

  external mln_render_target_extent extent;

  @ffi.Uint32()
  external int physical_width;

  @ffi.Uint32()
  external int physical_height;

  external ffi.Pointer<ffi.Void> texture;
}

final class mln_metal_context_descriptor extends ffi.Struct {
  @ffi.Uint32()
  external int size;

  external ffi.Pointer<ffi.Void> device;

  static ffi.Pointer<mln_metal_context_descriptor> $allocate(
    ffi.Allocator $allocator, {
    required int size,
    required ffi.Pointer<ffi.Void> device,
  }) => $allocator<mln_metal_context_descriptor>()
    ..ref.size = size
    ..ref.device = device;
}

final class mln_metal_owned_texture_descriptor extends ffi.Struct {
  @ffi.Uint32()
  external int size;

  external mln_render_target_extent extent;

  external mln_metal_context_descriptor context;
}

final class mln_metal_owned_texture_frame extends ffi.Struct {
  @ffi.Uint32()
  external int size;

  @ffi.Uint64()
  external int generation;

  @ffi.Uint32()
  external int width;

  @ffi.Uint32()
  external int height;

  @ffi.Double()
  external double scale_factor;

  @ffi.Uint64()
  external int frame_id;

  external ffi.Pointer<ffi.Void> texture;

  external ffi.Pointer<ffi.Void> device;

  @ffi.Uint64()
  external int pixel_format;

  static ffi.Pointer<mln_metal_owned_texture_frame> $allocate(
    ffi.Allocator $allocator, {
    required int size,
    required int generation,
    required int width,
    required int height,
    required double scale_factor,
    required int frame_id,
    required ffi.Pointer<ffi.Void> texture,
    required ffi.Pointer<ffi.Void> device,
    required int pixel_format,
  }) => $allocator<mln_metal_owned_texture_frame>()
    ..ref.size = size
    ..ref.generation = generation
    ..ref.width = width
    ..ref.height = height
    ..ref.scale_factor = scale_factor
    ..ref.frame_id = frame_id
    ..ref.texture = texture
    ..ref.device = device
    ..ref.pixel_format = pixel_format;
}

final class mln_metal_surface_descriptor extends ffi.Struct {
  @ffi.Uint32()
  external int size;

  external mln_render_target_extent extent;

  external mln_metal_context_descriptor context;

  external ffi.Pointer<ffi.Void> layer;
}

final class mln_multi_line_geometry extends ffi.Struct {
  external ffi.Pointer<mln_coordinate_span> lines;

  @ffi.Size()
  external int line_count;

  static ffi.Pointer<mln_multi_line_geometry> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<mln_coordinate_span> lines,
    required int line_count,
  }) => $allocator<mln_multi_line_geometry>()
    ..ref.lines = lines
    ..ref.line_count = line_count;
}

final class mln_multi_polygon_geometry extends ffi.Struct {
  external ffi.Pointer<mln_polygon_geometry> polygons;

  @ffi.Size()
  external int polygon_count;

  static ffi.Pointer<mln_multi_polygon_geometry> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<mln_polygon_geometry> polygons,
    required int polygon_count,
  }) => $allocator<mln_multi_polygon_geometry>()
    ..ref.polygons = polygons
    ..ref.polygon_count = polygon_count;
}

enum mln_network_status {
  MLN_NETWORK_STATUS_ONLINE(1),
  MLN_NETWORK_STATUS_OFFLINE(2);

  final int value;
  const mln_network_status(this.value);

  static mln_network_status fromValue(int value) => switch (value) {
    1 => MLN_NETWORK_STATUS_ONLINE,
    2 => MLN_NETWORK_STATUS_OFFLINE,
    _ => throw ArgumentError('Unknown value for mln_network_status: $value'),
  };
}

enum mln_north_orientation {
  MLN_NORTH_ORIENTATION_UP(0),
  MLN_NORTH_ORIENTATION_RIGHT(1),
  MLN_NORTH_ORIENTATION_DOWN(2),
  MLN_NORTH_ORIENTATION_LEFT(3);

  final int value;
  const mln_north_orientation(this.value);

  static mln_north_orientation fromValue(int value) => switch (value) {
    0 => MLN_NORTH_ORIENTATION_UP,
    1 => MLN_NORTH_ORIENTATION_RIGHT,
    2 => MLN_NORTH_ORIENTATION_DOWN,
    3 => MLN_NORTH_ORIENTATION_LEFT,
    _ => throw ArgumentError('Unknown value for mln_north_orientation: $value'),
  };
}

final class mln_offline_geometry_region_definition extends ffi.Struct {
  @ffi.Uint32()
  external int size;

  external ffi.Pointer<ffi.Char> style_url;

  external ffi.Pointer<mln_geometry> geometry;

  @ffi.Double()
  external double min_zoom;

  @ffi.Double()
  external double max_zoom;

  @ffi.Float()
  external double pixel_ratio;

  @ffi.Bool()
  external bool include_ideographs;

  static ffi.Pointer<mln_offline_geometry_region_definition> $allocate(
    ffi.Allocator $allocator, {
    required int size,
    required ffi.Pointer<ffi.Char> style_url,
    required ffi.Pointer<mln_geometry> geometry,
    required double min_zoom,
    required double max_zoom,
    required double pixel_ratio,
    required bool include_ideographs,
  }) => $allocator<mln_offline_geometry_region_definition>()
    ..ref.size = size
    ..ref.style_url = style_url
    ..ref.geometry = geometry
    ..ref.min_zoom = min_zoom
    ..ref.max_zoom = max_zoom
    ..ref.pixel_ratio = pixel_ratio
    ..ref.include_ideographs = include_ideographs;
}

typedef mln_offline_operation_id = ffi.Uint64;
typedef Dartmln_offline_operation_id = int;

enum mln_offline_operation_kind {
  MLN_OFFLINE_OPERATION_AMBIENT_CACHE(1),
  MLN_OFFLINE_OPERATION_REGION_CREATE(2),
  MLN_OFFLINE_OPERATION_REGION_GET(3),
  MLN_OFFLINE_OPERATION_REGIONS_LIST(4),
  MLN_OFFLINE_OPERATION_REGIONS_MERGE_DATABASE(5),
  MLN_OFFLINE_OPERATION_REGION_UPDATE_METADATA(6),
  MLN_OFFLINE_OPERATION_REGION_GET_STATUS(7),
  MLN_OFFLINE_OPERATION_REGION_SET_OBSERVED(8),
  MLN_OFFLINE_OPERATION_REGION_SET_DOWNLOAD_STATE(9),
  MLN_OFFLINE_OPERATION_REGION_INVALIDATE(10),
  MLN_OFFLINE_OPERATION_REGION_DELETE(11),
  MLN_OFFLINE_OPERATION_SET_MAXIMUM_AMBIENT_CACHE_SIZE(12);

  final int value;
  const mln_offline_operation_kind(this.value);

  static mln_offline_operation_kind fromValue(int value) => switch (value) {
    1 => MLN_OFFLINE_OPERATION_AMBIENT_CACHE,
    2 => MLN_OFFLINE_OPERATION_REGION_CREATE,
    3 => MLN_OFFLINE_OPERATION_REGION_GET,
    4 => MLN_OFFLINE_OPERATION_REGIONS_LIST,
    5 => MLN_OFFLINE_OPERATION_REGIONS_MERGE_DATABASE,
    6 => MLN_OFFLINE_OPERATION_REGION_UPDATE_METADATA,
    7 => MLN_OFFLINE_OPERATION_REGION_GET_STATUS,
    8 => MLN_OFFLINE_OPERATION_REGION_SET_OBSERVED,
    9 => MLN_OFFLINE_OPERATION_REGION_SET_DOWNLOAD_STATE,
    10 => MLN_OFFLINE_OPERATION_REGION_INVALIDATE,
    11 => MLN_OFFLINE_OPERATION_REGION_DELETE,
    12 => MLN_OFFLINE_OPERATION_SET_MAXIMUM_AMBIENT_CACHE_SIZE,
    _ => throw ArgumentError(
      'Unknown value for mln_offline_operation_kind: $value',
    ),
  };
}

enum mln_offline_operation_result_kind {
  MLN_OFFLINE_OPERATION_RESULT_NONE(0),
  MLN_OFFLINE_OPERATION_RESULT_REGION(1),
  MLN_OFFLINE_OPERATION_RESULT_OPTIONAL_REGION(2),
  MLN_OFFLINE_OPERATION_RESULT_REGION_LIST(3),
  MLN_OFFLINE_OPERATION_RESULT_REGION_STATUS(4);

  final int value;
  const mln_offline_operation_result_kind(this.value);

  static mln_offline_operation_result_kind fromValue(int value) =>
      switch (value) {
        0 => MLN_OFFLINE_OPERATION_RESULT_NONE,
        1 => MLN_OFFLINE_OPERATION_RESULT_REGION,
        2 => MLN_OFFLINE_OPERATION_RESULT_OPTIONAL_REGION,
        3 => MLN_OFFLINE_OPERATION_RESULT_REGION_LIST,
        4 => MLN_OFFLINE_OPERATION_RESULT_REGION_STATUS,
        _ => throw ArgumentError(
          'Unknown value for mln_offline_operation_result_kind: $value',
        ),
      };
}

final class mln_offline_region_definition extends ffi.Struct {
  @ffi.Uint32()
  external int size;

  @ffi.Uint32()
  external int type;

  external UnnamedUnion$5 data;
}

enum mln_offline_region_definition_type {
  MLN_OFFLINE_REGION_DEFINITION_TILE_PYRAMID(1),
  MLN_OFFLINE_REGION_DEFINITION_GEOMETRY(2);

  final int value;
  const mln_offline_region_definition_type(this.value);

  static mln_offline_region_definition_type fromValue(int value) =>
      switch (value) {
        1 => MLN_OFFLINE_REGION_DEFINITION_TILE_PYRAMID,
        2 => MLN_OFFLINE_REGION_DEFINITION_GEOMETRY,
        _ => throw ArgumentError(
          'Unknown value for mln_offline_region_definition_type: $value',
        ),
      };
}

enum mln_offline_region_download_state {
  MLN_OFFLINE_REGION_DOWNLOAD_INACTIVE(0),
  MLN_OFFLINE_REGION_DOWNLOAD_ACTIVE(1);

  final int value;
  const mln_offline_region_download_state(this.value);
